--- a/Programming/PrettyHair/_CODE/PrettyHair/UserInterface_CLI/UI.CLI.csproj
+++ b/Programming/PrettyHair/_CODE/PrettyHair/UserInterface_CLI/UI.CLI.csproj
@@ -50,6 +50,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{3d2a3e08-bd25-409d-9986-51d262927437}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
