--- a/Programming/PrettyHair/_CODE/PrettyHair/Core/Core.csproj
+++ b/Programming/PrettyHair/_CODE/PrettyHair/Core/Core.csproj
@@ -40,6 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Address.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="CustomerRepository.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="OrderLine.cs" />
+    <Compile Include="OrderRepository.cs" />
     <Compile Include="ProductType.cs" />
     <Compile Include="ProductTypeRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
