--- a/Programming/PrettyHair/_CODE/PrettyHair/UserInterface_CLI/UI.CLI.csproj
+++ b/Programming/PrettyHair/_CODE/PrettyHair/UserInterface_CLI/UI.CLI.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerManager.cs" />
+    <Compile Include="OrderManager.cs" />
+    <Compile Include="ProductManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validator.cs" />
